--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,10 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -23,7 +27,8 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.auth.login.LoginActivity"
-            android:exported="true">
+            android:exported="true"/>
+        <activity android:name=".ui.SplashScreen" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -36,6 +41,19 @@
             android:name=".ui.auth.register.RegisterSuccessActivity"
             android:exported="true" />
         <activity android:name=".ui.main.MainActivity" android:exported="true"/>
+        <activity android:name=".ui.detail.DetailActivity" android:exported="true"/>
+        <activity android:name=".ui.addstory.AddStoryActivity" android:exported="true"/>
+        <activity android:name=".ui.addstory.camera.CameraActivity" android:exported="true"/>
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.learn.mydiary.MyDiary"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_path"/>
+        </provider>
     </application>
 
 </manifest>
